some more allignment fixes to the calculator panel

--- a/RetroCalculator/Base.lproj/Main.storyboard
+++ b/RetroCalculator/Base.lproj/Main.storyboard
@@ -34,14 +34,14 @@
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backpanel" translatesAutoresizingMaskIntoConstraints="NO" id="4Bo-E9-2Xc">
-                                <rect key="frame" x="24" y="94" width="272" height="364"/>
+                                <rect key="frame" x="24" y="58" width="272" height="364"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="364" id="7W9-D3-v5G"/>
                                     <constraint firstAttribute="width" constant="272" id="MEn-uF-iFp"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="qMJ-30-YfI">
-                                <rect key="frame" x="58" y="123" width="204" height="306"/>
+                                <rect key="frame" x="58" y="87" width="204" height="306"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" distribution="fillEqually" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="bVv-9Y-OSs">
                                         <rect key="frame" x="0.0" y="0.0" width="204" height="58"/>
@@ -205,13 +205,13 @@
                             <constraint firstItem="DCF-vf-s3N" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4Fq-UJ-BEk"/>
                             <constraint firstItem="DCF-vf-s3N" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="9gW-QA-Ji7"/>
                             <constraint firstItem="8yC-pC-vRP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Lj1-l8-YgW"/>
-                            <constraint firstItem="4Bo-E9-2Xc" firstAttribute="top" secondItem="8yC-pC-vRP" secondAttribute="bottom" constant="10" id="OXc-Dd-Lr6"/>
                             <constraint firstItem="Lix-y1-WYE" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="QcF-Wz-UU5"/>
                             <constraint firstItem="DCF-vf-s3N" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="aS8-Wx-pWq"/>
                             <constraint firstItem="Lix-y1-WYE" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="emt-7r-A39"/>
                             <constraint firstItem="4Bo-E9-2Xc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fmV-TZ-KoH"/>
                             <constraint firstItem="DCF-vf-s3N" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gfB-qd-fEd"/>
                             <constraint firstItem="qMJ-30-YfI" firstAttribute="centerY" secondItem="4Bo-E9-2Xc" secondAttribute="centerY" id="h2j-Ph-Gtn"/>
+                            <constraint firstItem="4Bo-E9-2Xc" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="qlt-dF-CwG"/>
                             <constraint firstItem="Lix-y1-WYE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vat-bR-d5n"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
