--- a/RetroCalculator/Base.lproj/Main.storyboard
+++ b/RetroCalculator/Base.lproj/Main.storyboard
@@ -27,21 +27,21 @@
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="counter" translatesAutoresizingMaskIntoConstraints="NO" id="8yC-pC-vRP">
-                                <rect key="frame" x="24" y="5" width="272" height="79"/>
+                                <rect key="frame" x="23.5" y="0.0" width="273" height="79"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="79" id="Qz3-cH-wZx"/>
                                     <constraint firstAttribute="width" constant="272" id="sme-EB-SSj"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backpanel" translatesAutoresizingMaskIntoConstraints="NO" id="4Bo-E9-2Xc">
-                                <rect key="frame" x="24" y="58" width="272" height="364"/>
+                                <rect key="frame" x="24" y="93" width="272" height="364"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="364" id="7W9-D3-v5G"/>
                                     <constraint firstAttribute="width" constant="272" id="MEn-uF-iFp"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="qMJ-30-YfI">
-                                <rect key="frame" x="58" y="87" width="204" height="306"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qMJ-30-YfI">
+                                <rect key="frame" x="58" y="110" width="204" height="330"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" distribution="fillEqually" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="bVv-9Y-OSs">
                                         <rect key="frame" x="0.0" y="0.0" width="204" height="58"/>
@@ -73,7 +73,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" distribution="fillEqually" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Aiw-y3-IcJ">
-                                        <rect key="frame" x="0.0" y="62" width="204" height="58"/>
+                                        <rect key="frame" x="0.0" y="68" width="204" height="58"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6kz-7d-jLJ">
                                                 <rect key="frame" x="0.0" y="0.0" width="56" height="58"/>
@@ -102,7 +102,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" distribution="fillEqually" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Ab3-De-zRg">
-                                        <rect key="frame" x="0.0" y="124" width="204" height="58"/>
+                                        <rect key="frame" x="0.0" y="136" width="204" height="58"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69S-Ju-TsP">
                                                 <rect key="frame" x="0.0" y="0.0" width="56" height="58"/>
@@ -131,7 +131,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" distribution="fillEqually" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Zac-R7-BxY">
-                                        <rect key="frame" x="0.0" y="186" width="204" height="58"/>
+                                        <rect key="frame" x="0.0" y="204" width="204" height="58"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xol-88-y4Q">
                                                 <rect key="frame" x="0.0" y="0.0" width="56" height="58"/>
@@ -160,7 +160,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" distribution="fillEqually" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="FPg-Md-3qM">
-                                        <rect key="frame" x="0.0" y="248" width="204" height="58"/>
+                                        <rect key="frame" x="0.0" y="272" width="204" height="58"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qfs-oG-R4f">
                                                 <rect key="frame" x="0.0" y="0.0" width="56" height="58"/>
@@ -190,9 +190,12 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qpd-4s-jbt">
-                                <rect key="frame" x="36" y="28" width="244" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qpd-4s-jbt">
+                                <rect key="frame" x="38.5" y="21" width="243" height="37"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="243" id="0Kb-r9-xSJ"/>
+                                    <constraint firstAttribute="height" constant="37" id="coJ-cU-rho"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -201,17 +204,20 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="qMJ-30-YfI" firstAttribute="centerX" secondItem="4Bo-E9-2Xc" secondAttribute="centerX" id="20C-TL-qsY"/>
-                            <constraint firstItem="8yC-pC-vRP" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="5" id="3lW-u1-p7F"/>
                             <constraint firstItem="DCF-vf-s3N" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4Fq-UJ-BEk"/>
+                            <constraint firstItem="Qpd-4s-jbt" firstAttribute="centerY" secondItem="8yC-pC-vRP" secondAttribute="centerY" id="6Tr-TR-1Ml"/>
                             <constraint firstItem="DCF-vf-s3N" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="9gW-QA-Ji7"/>
+                            <constraint firstItem="Qpd-4s-jbt" firstAttribute="trailing" secondItem="8yC-pC-vRP" secondAttribute="trailing" constant="-15" id="KzD-FU-J7Q"/>
                             <constraint firstItem="8yC-pC-vRP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Lj1-l8-YgW"/>
                             <constraint firstItem="Lix-y1-WYE" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="QcF-Wz-UU5"/>
                             <constraint firstItem="DCF-vf-s3N" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="aS8-Wx-pWq"/>
+                            <constraint firstItem="Qpd-4s-jbt" firstAttribute="leading" secondItem="8yC-pC-vRP" secondAttribute="leading" constant="15" id="bbj-1C-SBB"/>
                             <constraint firstItem="Lix-y1-WYE" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="emt-7r-A39"/>
                             <constraint firstItem="4Bo-E9-2Xc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fmV-TZ-KoH"/>
                             <constraint firstItem="DCF-vf-s3N" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gfB-qd-fEd"/>
                             <constraint firstItem="qMJ-30-YfI" firstAttribute="centerY" secondItem="4Bo-E9-2Xc" secondAttribute="centerY" id="h2j-Ph-Gtn"/>
-                            <constraint firstItem="4Bo-E9-2Xc" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="qlt-dF-CwG"/>
+                            <constraint firstItem="4Bo-E9-2Xc" firstAttribute="top" secondItem="8yC-pC-vRP" secondAttribute="bottom" constant="14" id="pG4-K6-86V"/>
+                            <constraint firstItem="4Bo-E9-2Xc" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="35" id="qlt-dF-CwG"/>
                             <constraint firstItem="Lix-y1-WYE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vat-bR-d5n"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
