--- a/RetroCalculator/Base.lproj/Main.storyboard
+++ b/RetroCalculator/Base.lproj/Main.storyboard
@@ -183,6 +183,9 @@
                                                     <constraint firstAttribute="width" constant="56" id="Keb-Hy-uZ7"/>
                                                 </constraints>
                                                 <state key="normal" image="divide"/>
+                                                <connections>
+                                                    <action selector="onDividePressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0jV-Wk-ka2"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mfm-CX-gML">
                                                 <rect key="frame" x="148" y="0.0" width="56" height="58"/>
@@ -191,6 +194,9 @@
                                                     <constraint firstAttribute="width" constant="56" id="weS-FD-R2O"/>
                                                 </constraints>
                                                 <state key="normal" image="multiply"/>
+                                                <connections>
+                                                    <action selector="onMultiplyPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qDA-6H-rJW"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -204,6 +210,9 @@
                                                     <constraint firstAttribute="width" constant="56" id="nUy-R4-ifw"/>
                                                 </constraints>
                                                 <state key="normal" image="subtract"/>
+                                                <connections>
+                                                    <action selector="onSubtractPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ua1-u5-5Kr"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tzV-td-kdP">
                                                 <rect key="frame" x="74" y="0.0" width="56" height="58"/>
@@ -212,6 +221,9 @@
                                                     <constraint firstAttribute="height" constant="58" id="Yvm-1d-J66"/>
                                                 </constraints>
                                                 <state key="normal" image="add"/>
+                                                <connections>
+                                                    <action selector="onAddPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q0c-Pr-0Nb"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K5b-q9-80y">
                                                 <rect key="frame" x="148" y="0.0" width="56" height="58"/>
@@ -220,6 +232,9 @@
                                                     <constraint firstAttribute="height" constant="58" id="xRI-uC-5XJ"/>
                                                 </constraints>
                                                 <state key="normal" image="equal"/>
+                                                <connections>
+                                                    <action selector="onEqualPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NVM-11-ByO"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
